--- a/multi-container-app-main/compose.yaml
+++ b/multi-container-app-main/compose.yaml
@@ -18,21 +18,21 @@ services:
       NODE_ENV: production
     ports:
       - 3000:3000
-      - 35729:35729
-    develop:
-      watch:
-        - path: ./app/package.json
-          action: rebuild
-        - path: ./app
-          target: /usr/src/app
-          action: sync
+      
+    # develop:
+    #   watch:
+    #     - path: ./app/package.json
+    #       action: rebuild
+    #     - path: ./app
+    #       target: /usr/src/app
+    #       action: sync
 
   todo-database:
     image: mongo:6
-    #volumes: 
-    #  - database:/data/db
+    volumes:
+      - database:/data/db
     ports:
       - 27017:27017
 
-#volumes:
-  #database:
+volumes:
+  database:
